<resources>
    <string name="app_name" translatable="false">MerekeApp</string>
    <string name="str_home">Главная</string>
    <string name="str_catalog">Каталог</string>
    <string name="str_create">Создать</string>
    <string name="str_cart">Брони</string>
    <string name="str_profile">Профиль</string>
    <string name="str_search">Поиск…</string>
    <string name="str_view_all">См. все</string>
    <string name="str_person_image" translatable="false">person image</string>
    <string name="str_rating_image" translatable="false">rating image</string>
    <string name="str_back_button" translatable="false">back button</string>
    <string name="str_product_image" translatable="false">Изображение сущности</string>
    <string name="str_add_to_cart">Забронировать</string>
    <string name="str_about_singer">Об исполнителе</string>
    <string name="str_venue_information">Информация</string>
    <string name="str_kitchen">Кухня</string>
    <string name="str_average_price">Средний чек</string>
    <string name="str_place_quantity_label">Количество мест</string>
    <string name="str_working_time_label">Время работы</string>
    <string name="str_address_label">Адрес</string>
    <string name="str_extra_features">Дополнительные преимущества</string>
    <string name="str_smoke_area">Зона для курящих</string>
    <string name="str_karaoke">Караоке</string>
    <string name="str_parking">Парковка</string>
    <string name="str_about">Описание</string>
    <string name="str_venues">Рестораны</string>
    <string name="str_singers">Певцы</string>
    <string name="str_showmans">Шоумены</string>
    <string name="str_dancers">Танцоры</string>
    <string name="str_musicians">Музыканты</string>
    <string name="str_about_artist">Об исполнителе</string>
    <string name="str_about_showman">О шоумене</string>
    <string name="str_about_dancers">О тонцорах</string>
    <string name="str_about_musicians">О музыкантах</string>
    <string name="str_user_private_data">Личные данные</string>
    <string name="str_user_favorites">Избранные</string>
    <string name="str_user_techsupport">Служба поддержки</string>
    <string name="str_user_order_history">История заказов</string>
    <string name="str_user_faq">FAQ</string>
    <string name="str_user_about_app">О приложении</string>

    <!--ERRORS-->

    <string name="str_no_data_loaded">Не удалось прогрузить данные</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_welcome_to_mereke">Добро пожаловать\nв Mereke!</string>
    <string name="str_welcome_to_mereke_content">Создайте праздник своей мечты\nвместе с Mereke!</string>
    <string name="str_sign_in">ВОЙТИ</string>
    <string name="str_auth">зарегестрироваться</string>
    <string name="str_email">Адрес электронной почты</string>
    <string name="str_password">Пароль</string>
    <string name="str_registration">Регистрация</string>
    <string name="str_alert">Введите адрес электронной почты, мы отправим вам письмо для подтверждения</string>
    <string name="str_agreement">Продолжая, вы соглашаетесь со сбором, обработкой персональных данных и Пользовательским соглашением</string>
    <string name="str_name">Данияр</string>
    <string name="str_phone_number">+7 777 577 49 68</string>
    <string name="str_book">Забронировать</string>
    <string name="str_choose_date">Выберите день банкета</string>
    <string name="str_book_time">Время банкета</string>
    <string name="str_my_books">Мои брони</string>
    <string name="str_empty_cart">Ваш список пуст</string>
    <string name="str_go_to_catalog">Перейти в каталог</string>
    <string name="str_book_number">Бронь №</string>
    <string name="str_status">в ожидании</string>
    <string name="str_mng_name">Айнур Ж.</string>

</resources>