<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/str_home" />

    <item
        android:id="@+id/catalogFragment"
        android:icon="@drawable/ic_catalog"
        android:title="@string/str_catalog" />

    <item
        android:id="@+id/createFragment"
        android:icon="@drawable/ic_create"
        android:title="@string/str_create" />

    <item
        android:id="@+id/cartFragment"
        android:icon="@drawable/ic_cart"
        android:title="@string/str_cart" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/str_profile" />

</menu>